# test_2018_2021

./: .gitignore  LICENSE  README.md  Tests.pro
01_QtDialogTests/: .gitignore  01_QtDialogTests.pro  README.md
02_CvPortablePerfTest/: 02_CvPortablePerfTest.pro  README.md  cvres.cpp  cvres.h  data.qrc  main.cpp  main.qml  opencv.pri  qcvobject.cpp  qcvobject.h  share.h
03_CvStereoCam/: .gitignore  README.md  builds.sh  stereoCam.cpp  stereoCamRk3399.cpp  tripleCam.cpp
04_CvClCuda/: .gitignore  04_QtCvClCuda.pro  README.md  X230_CL_NV_Intel_POCL.txt  builds.sh  cvtestobject.cpp  cvtestobject.h  mainQt.cpp  qtestobject.cpp  qtestobject.h  testCL.cpp  testCPU.cpp
05_QtCvClCuda/: 05_QtCvClCuda.pro  main.cpp  opencv.pri  qtestobject.cpp  qtestobject.h  resources.qrc  test_G5SE_S8.txt
06_CalendarQml/: main.qml
07_CalendarWidget/: 07_CalendarWidget.pro  mainwindow.cpp  yacalendarwidget.cpp  yacalendarwidget.h
08_rayTraceTest/: 08_rayTraceTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  rtsphere.cpp  rtsphere.h
09_CvGStreamerCam/: .#gsCamRk3399.cpp  .gitignore  README.md  _buildGsCamX230.sh  _buildRk3399.sh  _buildRk3399_2.sh  dualcam_error.txt  gsCamRk3399.cpp  gsCamRk3399_2.cpp  gsCamX230  gsCamX230.cpp  previewRk3399Cam1.sh  previewRk3399Cam2.sh  video2fileRk3399.sh
10_cvSmallestCam/: .gitignore  _build.sh  cvSmallestCam  cvSmallestCam.cpp
11_AMG8833_i2c_Rpi/: .gitignore  README.md  amg8833_i2c.cpp  amg8833_i2c.pro  build.sh  main.cpp  qamg8833.cpp  qamg8833.h
12_RkIsp1Tests/: .gitignore  (+4 more)
45_libtorch_cpp/simpleNN_MNIST/: CMakeLists.txt  readme.md
(+225 files in other folders)
